# advent-of-code

./: .gitignore
2019/: cabal.project
2019/01/: day01.cabal  soln.1.hs  soln.2.hs
2019/01/Part1/: Main.hs
2019/01/Part2/: Main.hs
2019/02/: day02.cabal
2019/02/Part1/: Main.hs
2019/02/Part2/: Main.hs
2019/03/: day03.cabal
2019/03/Part1/: Main.hs
2019/03/Part2/: Main.hs
2019/04/: day04.cabal
2019/04/Part1/: Main.hs
2019/04/Part2/: Main.hs
2019/05/: day05.cabal
2019/05/Part1/: Main.hs
2019/05/Part2/: Main.hs
2019/06/: day06.cabal
2019/06/Part1/: Main.hs
2019/06/Part2/: Main.hs
2019/07/: day07.cabal
2019/07/Part1/: Main.hs
2020/01/: p1.rs  p2.rs
2020/02/: p1.rs  p2.rs
2020/03/: p1.rs  p2.rs
2020/04/: Cargo.toml  p1.rs
2020/05/: p1.rs  p2.rs
2020/06/: p1.rs  p2.rs
2020/07/: p1.rs  p2.rs
2020/08/: p1.rs  p2.rs
2020/09/: p1.rs  p2.rs
2020/10/: Cargo.toml
2020/11/: Cargo.toml
2020/12/: Cargo.toml
2020/13/: Cargo.toml
2021/01/: part1.fnl  part1.py  part2.fnl
2021/02/: part1.fnl  part2.fnl
2021/03/: part1.fnl  part2.fnl
2021/04/: part1.fnl  part2.fnl
2021/05/: part1.fnl  part2.fnl
2021/06/: solve.fnl
2021/07/: part1.fnl  part2.fnl
2022/: readme.md
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day3/: part1.py  part2.py
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day7/src/: main.rs
2022/day8/src/: main.rs
2022/day9/src/: main.rs
