name:                day05
version:             0.1.0.0
license:             MIT
author:              Josh Kunz
maintainer:          josh@kunz.xyz

build-type:          Simple
cabal-version:       >=1.10

executable soln1 
  main-is:             Main.hs
  hs-source-dirs:      Part1
  build-depends:       base >=4.12 && <4.13, split, containers
  default-language:    Haskell2010

executable soln2
  main-is:             Main.hs
  hs-source-dirs:      Part2
  build-depends:       base >=4.12 && <4.13, split, containers
  default-language:    Haskell2010
